<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strlblActividadCentral_AC"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/strContentDescriptionImagenNexus_AC"
        android:src="@drawable/nexus_256" />

    <TextView
        android:id="@+id/lblMensajeBienvenida_AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strlblNombreUsuario_AC"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayoutVacio1"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strlblActividades_AC"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblSensarAcelerometro_AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/strlblActAcelerometro_AC"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblSensarGPS_AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/strlblActGPS_AC"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/linearLayoutVacio2"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/lblRegresar_AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/strlblRegresar_AC"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>